parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> variablesGlobales declaracionEstructuras declaracionFuncion declaraMain
Rule 2     variablesGlobales -> ABIWORLD declaracionVariable PC variablesGlobales
Rule 3     variablesGlobales -> empty
Rule 4     declaracionVariable -> tipoDatos ID ASIG tipoValores
Rule 5     declaracionVariable -> declaracionArreglo
Rule 6     declaracionVariable -> declaracionVariable C declaracionVariable
Rule 7     declaracionVariable -> empty
Rule 8     tipoDatos -> INT
Rule 9     tipoDatos -> CHAR
Rule 10    tipoDatos -> STRING
Rule 11    tipoDatos -> BOOL
Rule 12    tipoDatos -> FLOAT
Rule 13    tipoDatos -> VOID
Rule 14    tipoValores -> NUMERO
Rule 15    tipoValores -> FLOAT_VALOR
Rule 16    tipoValores -> CHAR_VALOR
Rule 17    tipoValores -> STRING_VALOR
Rule 18    tipoValores -> TRUE
Rule 19    tipoValores -> FALSE
Rule 20    declaracionArreglo -> ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC
Rule 21    declaracionArreglo -> ABIRRAY tipoDatos ID
Rule 22    declaracionEstructuras -> ABISTRUCT ID LLAVEA declaracionVariable LLAVEC PC declaracionEstructuras
Rule 23    declaracionEstructuras -> empty
Rule 24    declaracionFuncion -> tipoDatos ID PARENTA declaracionParametros PARENTC LLAVEA listaInst return LLAVEC declaracionFuncion
Rule 25    declaracionFuncion -> empty
Rule 26    declaracionParametros -> tipoDatos ID
Rule 27    declaracionParametros -> declaracionParametros C declaracionParametros
Rule 28    declaracionParametros -> empty
Rule 29    declaraMain -> ABIMAIN LLAVEA listaInst LLAVEC
Rule 30    declaracionCiclo -> ABIJOR PARENTA inicializacion PC cond PC cambio PARENTC LLAVEA listaInst LLAVEC declaracionCiclo
Rule 31    declaracionCiclo -> empty
Rule 32    inicializacion -> INT ID ASIG NUMERO
Rule 33    inicializacion -> ID ASIG NUMERO
Rule 34    cond -> ID operadores ID
Rule 35    cond -> ID operadores NUMERO
Rule 36    operadores -> LT
Rule 37    operadores -> LTE
Rule 38    operadores -> GTE
Rule 39    operadores -> GT
Rule 40    cambio -> ID ASIG ID AGREGA ID
Rule 41    cambio -> ID ASIG ID RESTA ID
Rule 42    cambio -> ID ASIG ID AGREGA NUMERO
Rule 43    cambio -> ID ASIG ID RESTA NUMERO
Rule 44    cambio -> ID INCREMENTO
Rule 45    cambio -> ID DECREMENTO
Rule 46    declaracionIf -> ABIF PARENTA condicion PARENTC LLAVEA listaInst LLAVEC declaracionElse declaracionIf
Rule 47    declaracionIf -> ABIF PARENTA condicion PARENTC LLAVEA listaInst LLAVEC declaracionIf
Rule 48    declaracionIf -> empty
Rule 49    declaracionElse -> ELSE LLAVEA listaInst LLAVEC
Rule 50    condicion -> ID operadoresRel ID operadoresLogicos condicion
Rule 51    condicion -> ID operadoresRel ID
Rule 52    condicion -> ID
Rule 53    condicion -> tipoValores
Rule 54    condicion -> ID operadoresRel tipoValores operadoresLogicos condicion
Rule 55    condicion -> ID operadoresRel tipoValores
Rule 56    condicion -> NOT ID operadoresRel ID operadoresLogicos condicion
Rule 57    condicion -> NOT ID operadoresRel ID
Rule 58    condicion -> NOT ID operadoresRel tipoValores operadoresLogicos condicion
Rule 59    condicion -> NOT ID operadoresRel tipoValores
Rule 60    condicion -> ID operadoresRel NOT ID operadoresLogicos condicion
Rule 61    condicion -> ID operadoresRel NOT ID
Rule 62    condicion -> ID operadoresRel NOT tipoValores operadoresLogicos condicion
Rule 63    condicion -> ID operadoresRel NOT tipoValores
Rule 64    condicion -> NOT PARENTA condicion PARENTC
Rule 65    operadoresLogicos -> AND
Rule 66    operadoresLogicos -> OR
Rule 67    operadoresRel -> LT
Rule 68    operadoresRel -> LTE
Rule 69    operadoresRel -> GT
Rule 70    operadoresRel -> GTE
Rule 71    operadoresRel -> NE
Rule 72    operadoresRel -> COMP
Rule 73    entradaDatos -> ABIN PARENTA ID PARENTC PC entradaDatos
Rule 74    entradaDatos -> empty
Rule 75    salidaDatos -> ABOUT PARENTA STRING_VALOR PARENTC salidaDatos PC
Rule 76    salidaDatos -> ABOUT PARENTA listaSalida PARENTC salidaDatos PC
Rule 77    salidaDatos -> ABOUT PARENTA STRING_VALOR C listaSalida PARENTC PC salidaDatos
Rule 78    salidaDatos -> empty
Rule 79    listaSalida -> ID C listaSalida
Rule 80    listaSalida -> ID
Rule 81    operacionesBasicas -> ID ASIG ID operadoresBasicos ID PC operacionesBasicas
Rule 82    operacionesBasicas -> ID ASIG tipoValores operadoresBasicos ID PC operacionesBasicas
Rule 83    operacionesBasicas -> ID ASIG tipoValores operadoresBasicos tipoValores PC operacionesBasicas
Rule 84    operacionesBasicas -> ID ASIG ID operadoresBasicos tipoValores PC operacionesBasicas
Rule 85    operacionesBasicas -> ID ASIG tipoValores PC operacionesBasicas
Rule 86    operacionesBasicas -> ID ASIG ID P ID PC operacionesBasicas
Rule 87    operacionesBasicas -> ID ASIG ID PC operacionesBasicas
Rule 88    operacionesBasicas -> ID P ID PC operacionesBasicas
Rule 89    operacionesBasicas -> ID ASIG ID CORA NUMERO CORC PC operacionesBasicas
Rule 90    operacionesBasicas -> ID CORA NUMERO CORC ASIG ID CORA NUMERO CORC PC operacionesBasicas
Rule 91    operacionesBasicas -> ID CORA NUMERO CORC ASIG tipoValores PC operacionesBasicas
Rule 92    operacionesBasicas -> ID PARENTA listaValores PARENTC PC operacionesBasicas
Rule 93    operacionesBasicas -> ID ASIG ID PARENTA listaValores PARENTC PC operacionesBasicas
Rule 94    operacionesBasicas -> empty
Rule 95    listaValores -> tipoValores
Rule 96    listaValores -> ID CORA NUMERO CORC
Rule 97    listaValores -> ID
Rule 98    listaValores -> listaValores C listaValores
Rule 99    listaValores -> empty
Rule 100   operadoresBasicos -> AGREGA
Rule 101   operadoresBasicos -> RESTA
Rule 102   operadoresBasicos -> MULT
Rule 103   operadoresBasicos -> DIV
Rule 104   declaraStruct -> ABIDECLARA ID ID PC declaraStruct
Rule 105   declaraStruct -> empty
Rule 106   listaInstrucciones -> entradaDatos salidaDatos declaraStruct declaracionVariable operacionesBasicas declaracionIf declaracionCiclo
Rule 107   listaInst -> listaInstrucciones
Rule 108   listaInst -> listaInstrucciones listaInst
Rule 109   listaInst -> empty
Rule 110   return -> RETURN tipoValores PC
Rule 111   return -> RETURN ID PC
Rule 112   return -> RETURN PC
Rule 113   empty -> <empty>

Terminals, with rules where they appear

ABIDECLARA           : 104
ABIF                 : 46 47
ABIJOR               : 30
ABIMAIN              : 29
ABIN                 : 73
ABIRRAY              : 20 21
ABISTRUCT            : 22
ABIWORLD             : 2
ABOUT                : 75 76 77
AGREGA               : 40 42 100
AND                  : 65
ASIG                 : 4 20 32 33 40 41 42 43 81 82 83 84 85 86 87 89 90 91 93
BOOL                 : 11
C                    : 6 27 77 79 98
CHAR                 : 9
CHAR_VALOR           : 16
COMP                 : 72
CORA                 : 20 89 90 90 91 96
CORC                 : 20 89 90 90 91 96
DECREMENTO           : 45
DIV                  : 103
ELSE                 : 49
FALSE                : 19
FLOAT                : 12
FLOAT_VALOR          : 15
GT                   : 39 69
GTE                  : 38 70
ID                   : 4 20 21 22 24 26 32 33 34 34 35 40 40 40 41 41 41 42 42 43 43 44 45 50 50 51 51 52 54 55 56 56 57 57 58 59 60 60 61 61 62 63 73 79 80 81 81 81 82 82 83 84 84 85 86 86 86 87 87 88 88 89 89 90 90 91 92 93 93 96 97 104 104 111
INCREMENTO           : 44
INT                  : 8 32
LLAVEA               : 22 24 29 30 46 47 49
LLAVEC               : 22 24 29 30 46 47 49
LT                   : 36 67
LTE                  : 37 68
MULT                 : 102
NE                   : 71
NOT                  : 56 57 58 59 60 61 62 63 64
NUMERO               : 14 20 32 33 35 42 43 89 90 90 91 96
OR                   : 66
P                    : 86 88
PARENTA              : 24 30 46 47 64 73 75 76 77 92 93
PARENTC              : 24 30 46 47 64 73 75 76 77 92 93
PC                   : 2 22 30 30 73 75 76 77 81 82 83 84 85 86 87 88 89 90 91 92 93 104 110 111 112
RESTA                : 41 43 101
RETURN               : 110 111 112
STRING               : 10
STRING_VALOR         : 17 75 77
TRUE                 : 18
VOID                 : 13
error                : 

Nonterminals, with rules where they appear

cambio               : 30
cond                 : 30
condicion            : 46 47 50 54 56 58 60 62 64
declaraMain          : 1
declaraStruct        : 104 106
declaracionArreglo   : 5
declaracionCiclo     : 30 106
declaracionElse      : 46
declaracionEstructuras : 1 22
declaracionFuncion   : 1 24
declaracionIf        : 46 47 106
declaracionParametros : 24 27 27
declaracionVariable  : 2 6 6 22 106
empty                : 3 7 23 25 28 31 48 74 78 94 99 105 109
entradaDatos         : 73 106
inicializacion       : 30
listaInst            : 24 29 30 46 47 49 108
listaInstrucciones   : 107 108
listaSalida          : 76 77 79
listaValores         : 92 93 98 98
operacionesBasicas   : 81 82 83 84 85 86 87 88 89 90 91 92 93 106
operadores           : 34 35
operadoresBasicos    : 81 82 83 84
operadoresLogicos    : 50 54 56 58 60 62
operadoresRel        : 50 51 54 55 56 57 58 59 60 61 62 63
return               : 24
salidaDatos          : 75 76 77 106
start                : 0
tipoDatos            : 4 20 21 24 26
tipoValores          : 4 53 54 55 58 59 62 63 82 83 83 84 85 91 95 110
variablesGlobales    : 1 2

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . variablesGlobales declaracionEstructuras declaracionFuncion declaraMain
    (2) variablesGlobales -> . ABIWORLD declaracionVariable PC variablesGlobales
    (3) variablesGlobales -> . empty
    (113) empty -> .

    ABIWORLD        shift and go to state 3
    ABISTRUCT       reduce using rule 113 (empty -> .)
    INT             reduce using rule 113 (empty -> .)
    CHAR            reduce using rule 113 (empty -> .)
    STRING          reduce using rule 113 (empty -> .)
    BOOL            reduce using rule 113 (empty -> .)
    FLOAT           reduce using rule 113 (empty -> .)
    VOID            reduce using rule 113 (empty -> .)
    ABIMAIN         reduce using rule 113 (empty -> .)

    start                          shift and go to state 1
    variablesGlobales              shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> variablesGlobales . declaracionEstructuras declaracionFuncion declaraMain
    (22) declaracionEstructuras -> . ABISTRUCT ID LLAVEA declaracionVariable LLAVEC PC declaracionEstructuras
    (23) declaracionEstructuras -> . empty
    (113) empty -> .

    ABISTRUCT       shift and go to state 6
    INT             reduce using rule 113 (empty -> .)
    CHAR            reduce using rule 113 (empty -> .)
    STRING          reduce using rule 113 (empty -> .)
    BOOL            reduce using rule 113 (empty -> .)
    FLOAT           reduce using rule 113 (empty -> .)
    VOID            reduce using rule 113 (empty -> .)
    ABIMAIN         reduce using rule 113 (empty -> .)

    declaracionEstructuras         shift and go to state 5
    empty                          shift and go to state 7

state 3

    (2) variablesGlobales -> ABIWORLD . declaracionVariable PC variablesGlobales
    (4) declaracionVariable -> . tipoDatos ID ASIG tipoValores
    (5) declaracionVariable -> . declaracionArreglo
    (6) declaracionVariable -> . declaracionVariable C declaracionVariable
    (7) declaracionVariable -> . empty
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID
    (20) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> . ABIRRAY tipoDatos ID
    (113) empty -> .

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17
    ABIRRAY         shift and go to state 18
    PC              reduce using rule 113 (empty -> .)
    C               reduce using rule 113 (empty -> .)

    declaracionVariable            shift and go to state 8
    tipoDatos                      shift and go to state 9
    declaracionArreglo             shift and go to state 10
    empty                          shift and go to state 11

state 4

    (3) variablesGlobales -> empty .

    ABISTRUCT       reduce using rule 3 (variablesGlobales -> empty .)
    INT             reduce using rule 3 (variablesGlobales -> empty .)
    CHAR            reduce using rule 3 (variablesGlobales -> empty .)
    STRING          reduce using rule 3 (variablesGlobales -> empty .)
    BOOL            reduce using rule 3 (variablesGlobales -> empty .)
    FLOAT           reduce using rule 3 (variablesGlobales -> empty .)
    VOID            reduce using rule 3 (variablesGlobales -> empty .)
    ABIMAIN         reduce using rule 3 (variablesGlobales -> empty .)


state 5

    (1) start -> variablesGlobales declaracionEstructuras . declaracionFuncion declaraMain
    (24) declaracionFuncion -> . tipoDatos ID PARENTA declaracionParametros PARENTC LLAVEA listaInst return LLAVEC declaracionFuncion
    (25) declaracionFuncion -> . empty
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID
    (113) empty -> .

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17
    ABIMAIN         reduce using rule 113 (empty -> .)

    declaracionFuncion             shift and go to state 19
    tipoDatos                      shift and go to state 20
    empty                          shift and go to state 21

state 6

    (22) declaracionEstructuras -> ABISTRUCT . ID LLAVEA declaracionVariable LLAVEC PC declaracionEstructuras

    ID              shift and go to state 22


state 7

    (23) declaracionEstructuras -> empty .

    INT             reduce using rule 23 (declaracionEstructuras -> empty .)
    CHAR            reduce using rule 23 (declaracionEstructuras -> empty .)
    STRING          reduce using rule 23 (declaracionEstructuras -> empty .)
    BOOL            reduce using rule 23 (declaracionEstructuras -> empty .)
    FLOAT           reduce using rule 23 (declaracionEstructuras -> empty .)
    VOID            reduce using rule 23 (declaracionEstructuras -> empty .)
    ABIMAIN         reduce using rule 23 (declaracionEstructuras -> empty .)


state 8

    (2) variablesGlobales -> ABIWORLD declaracionVariable . PC variablesGlobales
    (6) declaracionVariable -> declaracionVariable . C declaracionVariable

    PC              shift and go to state 23
    C               shift and go to state 24


state 9

    (4) declaracionVariable -> tipoDatos . ID ASIG tipoValores

    ID              shift and go to state 25


state 10

    (5) declaracionVariable -> declaracionArreglo .

    PC              reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    C               reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    LLAVEC          reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ID              reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIF            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIJOR          reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIN            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABOUT           reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIDECLARA      reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    INT             reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    CHAR            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    STRING          reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    BOOL            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    FLOAT           reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    VOID            reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    ABIRRAY         reduce using rule 5 (declaracionVariable -> declaracionArreglo .)
    RETURN          reduce using rule 5 (declaracionVariable -> declaracionArreglo .)


state 11

    (7) declaracionVariable -> empty .

    PC              reduce using rule 7 (declaracionVariable -> empty .)
    C               reduce using rule 7 (declaracionVariable -> empty .)
    LLAVEC          reduce using rule 7 (declaracionVariable -> empty .)
    ID              reduce using rule 7 (declaracionVariable -> empty .)
    ABIF            reduce using rule 7 (declaracionVariable -> empty .)
    ABIJOR          reduce using rule 7 (declaracionVariable -> empty .)
    ABIN            reduce using rule 7 (declaracionVariable -> empty .)
    ABOUT           reduce using rule 7 (declaracionVariable -> empty .)
    ABIDECLARA      reduce using rule 7 (declaracionVariable -> empty .)
    INT             reduce using rule 7 (declaracionVariable -> empty .)
    CHAR            reduce using rule 7 (declaracionVariable -> empty .)
    STRING          reduce using rule 7 (declaracionVariable -> empty .)
    BOOL            reduce using rule 7 (declaracionVariable -> empty .)
    FLOAT           reduce using rule 7 (declaracionVariable -> empty .)
    VOID            reduce using rule 7 (declaracionVariable -> empty .)
    ABIRRAY         reduce using rule 7 (declaracionVariable -> empty .)
    RETURN          reduce using rule 7 (declaracionVariable -> empty .)


state 12

    (8) tipoDatos -> INT .

    ID              reduce using rule 8 (tipoDatos -> INT .)


state 13

    (9) tipoDatos -> CHAR .

    ID              reduce using rule 9 (tipoDatos -> CHAR .)


state 14

    (10) tipoDatos -> STRING .

    ID              reduce using rule 10 (tipoDatos -> STRING .)


state 15

    (11) tipoDatos -> BOOL .

    ID              reduce using rule 11 (tipoDatos -> BOOL .)


state 16

    (12) tipoDatos -> FLOAT .

    ID              reduce using rule 12 (tipoDatos -> FLOAT .)


state 17

    (13) tipoDatos -> VOID .

    ID              reduce using rule 13 (tipoDatos -> VOID .)


state 18

    (20) declaracionArreglo -> ABIRRAY . tipoDatos ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> ABIRRAY . tipoDatos ID
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID

    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17

    tipoDatos                      shift and go to state 26

state 19

    (1) start -> variablesGlobales declaracionEstructuras declaracionFuncion . declaraMain
    (29) declaraMain -> . ABIMAIN LLAVEA listaInst LLAVEC

    ABIMAIN         shift and go to state 28

    declaraMain                    shift and go to state 27

state 20

    (24) declaracionFuncion -> tipoDatos . ID PARENTA declaracionParametros PARENTC LLAVEA listaInst return LLAVEC declaracionFuncion

    ID              shift and go to state 29


state 21

    (25) declaracionFuncion -> empty .

    ABIMAIN         reduce using rule 25 (declaracionFuncion -> empty .)


state 22

    (22) declaracionEstructuras -> ABISTRUCT ID . LLAVEA declaracionVariable LLAVEC PC declaracionEstructuras

    LLAVEA          shift and go to state 30


state 23

    (2) variablesGlobales -> ABIWORLD declaracionVariable PC . variablesGlobales
    (2) variablesGlobales -> . ABIWORLD declaracionVariable PC variablesGlobales
    (3) variablesGlobales -> . empty
    (113) empty -> .

    ABIWORLD        shift and go to state 3
    ABISTRUCT       reduce using rule 113 (empty -> .)
    INT             reduce using rule 113 (empty -> .)
    CHAR            reduce using rule 113 (empty -> .)
    STRING          reduce using rule 113 (empty -> .)
    BOOL            reduce using rule 113 (empty -> .)
    FLOAT           reduce using rule 113 (empty -> .)
    VOID            reduce using rule 113 (empty -> .)
    ABIMAIN         reduce using rule 113 (empty -> .)

    variablesGlobales              shift and go to state 31
    empty                          shift and go to state 4

state 24

    (6) declaracionVariable -> declaracionVariable C . declaracionVariable
    (4) declaracionVariable -> . tipoDatos ID ASIG tipoValores
    (5) declaracionVariable -> . declaracionArreglo
    (6) declaracionVariable -> . declaracionVariable C declaracionVariable
    (7) declaracionVariable -> . empty
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID
    (20) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> . ABIRRAY tipoDatos ID
    (113) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for ABIRRAY resolved as shift
    INT             shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    FLOAT           shift and go to state 16
    VOID            shift and go to state 17
    ABIRRAY         shift and go to state 18
    C               reduce using rule 113 (empty -> .)
    PC              reduce using rule 113 (empty -> .)
    LLAVEC          reduce using rule 113 (empty -> .)
    ID              reduce using rule 113 (empty -> .)
    ABIF            reduce using rule 113 (empty -> .)
    ABIJOR          reduce using rule 113 (empty -> .)
    ABIN            reduce using rule 113 (empty -> .)
    ABOUT           reduce using rule 113 (empty -> .)
    ABIDECLARA      reduce using rule 113 (empty -> .)
    RETURN          reduce using rule 113 (empty -> .)

  ! INT             [ reduce using rule 113 (empty -> .) ]
  ! CHAR            [ reduce using rule 113 (empty -> .) ]
  ! STRING          [ reduce using rule 113 (empty -> .) ]
  ! BOOL            [ reduce using rule 113 (empty -> .) ]
  ! FLOAT           [ reduce using rule 113 (empty -> .) ]
  ! VOID            [ reduce using rule 113 (empty -> .) ]
  ! ABIRRAY         [ reduce using rule 113 (empty -> .) ]

    declaracionVariable            shift and go to state 32
    tipoDatos                      shift and go to state 9
    declaracionArreglo             shift and go to state 10
    empty                          shift and go to state 11

state 25

    (4) declaracionVariable -> tipoDatos ID . ASIG tipoValores

    ASIG            shift and go to state 33


state 26

    (20) declaracionArreglo -> ABIRRAY tipoDatos . ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> ABIRRAY tipoDatos . ID

    ID              shift and go to state 34


state 27

    (1) start -> variablesGlobales declaracionEstructuras declaracionFuncion declaraMain .

    $end            reduce using rule 1 (start -> variablesGlobales declaracionEstructuras declaracionFuncion declaraMain .)


state 28

    (29) declaraMain -> ABIMAIN . LLAVEA listaInst LLAVEC

    LLAVEA          shift and go to state 35


state 29

    (24) declaracionFuncion -> tipoDatos ID . PARENTA declaracionParametros PARENTC LLAVEA listaInst return LLAVEC declaracionFuncion

    PARENTA         shift and go to state 36


state 30

    (22) declaracionEstructuras -> ABISTRUCT ID LLAVEA . declaracionVariable LLAVEC PC declaracionEstructuras
    (4) declaracionVariable -> . tipoDatos ID ASIG tipoValores
    (5) declaracionVariable -> . declaracionArreglo
    (6) declaracionVariable -> . declaracionVariable C declaracionVariable
    (7) declaracionVariable -> . empty
    (8) tipoDatos -> . INT
    (9) tipoDatos -> . CHAR
    (10) tipoDatos -> . STRING
    (11) tipoDatos -> . BOOL
    (12) tipoDatos -> . FLOAT
    (13) tipoDatos -> . VOID
    (20) declaracionArreglo -> . ABIRRAY tipoDatos ID ASIG CORA NUMERO CORC
    (21) declaracionArreglo -> . ABIRRAY tipoDatos ID
    (113) empty -> .
